--- a/metadata.yaml
+++ b/metadata.yaml
@@ -37,6 +37,7 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcc 'PQ'
 - !lcsh 'Hell'
+- GITenberg
 title: 'L''enfer (2 of 2)
 
   La Divine Comédie - Traduit par Rivarol'
